force-app/main/default/objects/Case__c/Case__c.object-meta.xml
<CustomObject>
    <label>買取受付</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>買取受付No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>