force-app/main/default/objects/Case__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>お名前　★</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>買取受付</relationshipLabel>
    <relationshipName>AccountCase</relationshipName>
    <type>Lookup</type>
</CustomField>