force-app/main/default/objects/Case__c/fields/Active_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Active_Campaign__c</fullName>
    <description>山本</description>
    <label>実行中のオートコール</label>
    <length>30</length>
    <type>Text</type>
</CustomField>