force-app/main/default/objects/Case__c/fields/AfterDocumentDestination__c.field-meta.xml
<CustomField>
    <fullName>AfterDocumentDestination__c</fullName>
    <label>書類送付先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自宅（住所（個人））</fullName>
            </value>
            <value>
                <fullName>保管先（住所（その他））</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>