force-app/main/default/objects/Case__c/fields/AfterDocuments_Free__c.field-meta.xml
<CustomField>
    <fullName>AfterDocuments_Free__c</fullName>
    <label>後処理備考</label>
    <type>TextArea</type>
</CustomField>