force-app/main/default/objects/Case__c/fields/AfterDocuments_Person__c.field-meta.xml
<CustomField>
    <fullName>AfterDocuments_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>後処理担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AfterDocuments_Case</relationshipName>
    <type>Lookup</type>
</CustomField>