force-app/main/default/objects/Case__c/fields/AfterDocumentsShipmentDay__c.field-meta.xml
<CustomField>
    <fullName>AfterDocumentsShipmentDay__c</fullName>
    <label>後処理発送日</label>
    <type>Date</type>
</CustomField>