force-app/main/default/objects/Case__c/fields/age_gender__c.field-meta.xml
<CustomField>
    <fullName>age_gender__c</fullName>
    <description>長谷川</description>
    <label>年齢性別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F1(18～34歳)</fullName>
            </value>
            <value>
                <fullName>F2(35～49歳)</fullName>
            </value>
            <value>
                <fullName>F3(50歳以上)</fullName>
            </value>
            <value>
                <fullName>M1(18～34歳)</fullName>
            </value>
            <value>
                <fullName>M2(35～49歳)</fullName>
            </value>
            <value>
                <fullName>M3(50歳以上)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>