force-app/main/default/objects/Case__c/fields/Airbag__c.field-meta.xml
<CustomField>
    <fullName>Airbag__c</fullName>
    <label>エアバッグ展開　★</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ない</fullName>
                <default>true</default>
                <label>展開なし</label>
            </value>
            <value>
                <fullName>ある</fullName>
                <label>展開あり</label>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>