force-app/main/default/objects/Case__c/fields/Alerts_OtherAA__c.field-meta.xml
<CustomField>
    <fullName>Alerts_OtherAA__c</fullName>
    <description>山本</description>
    <formula>AND(
  NOT(ISBLANK( PossiblePickUpDate__c )),
 TEXT(  landing__r.Mst_Yard_Classification__c)  = &quot;他社オークション&quot;,
  ISBLANK(TEXT(  OtherAA_Place__c ) ),
  ISBLANK(OtherAA_Installation_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerts_OtherAA</label>
    <type>Checkbox</type>
</CustomField>