force-app/main/default/objects/Case__c/fields/ALL_AssessmentCount__c.field-meta.xml
<CustomField>
    <fullName>ALL_AssessmentCount__c</fullName>
    <formula>IF( OR( ISPICKVAL( VehicleClassification__c , &quot;はなまるオークション/他社AA（営業）&quot; ) , ISPICKVAL( VehicleClassification__c , &quot;営業A&quot; ) ) , Oppotunity__r.AssessmentCount__c , ContactCount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>査定カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>