force-app/main/default/objects/Case__c/fields/AmazonGIFT_URL__c.field-meta.xml
<CustomField>
    <fullName>AmazonGIFT_URL__c</fullName>
    <description>山本</description>
    <label>AmazonギフトURL</label>
    <type>TextArea</type>
</CustomField>