force-app/main/default/objects/Case__c/fields/AmountProposedBudgetFloor__c.field-meta.xml
<CustomField>
    <fullName>AmountProposedBudgetFloor__c</fullName>
    <description>佐野</description>
    <label>概算下限基準</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>以上</fullName>
            </value>
            <value>
                <fullName>前後</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>