force-app/main/default/objects/Case__c/fields/ApproximateCount__c.field-meta.xml
<CustomField>
    <fullName>ApproximateCount__c</fullName>
    <description>佐野</description>
    <formula>IF( Cancel_SomeReason__c  = TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>概算カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>