force-app/main/default/objects/Case__c/fields/ApproximateReason__c.field-meta.xml
<CustomField>
    <fullName>ApproximateReason__c</fullName>
    <description>山本</description>
    <label>概算理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>現状売る気なし</fullName>
            </value>
            <value>
                <fullName>手放しまだ先</fullName>
            </value>
            <value>
                <fullName>次車納車待ち</fullName>
            </value>
            <value>
                <fullName>次車検討中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>