force-app/main/default/objects/Case__c/fields/area_biko__c.field-meta.xml
<CustomField>
    <fullName>area_biko__c</fullName>
    <formula>Demolition_contractor__r.area_biko__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>エリアの備考</label>
    <type>Text</type>
</CustomField>