force-app/main/default/objects/Case__c/fields/assess_grade__c.field-meta.xml
<CustomField>
    <fullName>assess_grade__c</fullName>
    <label>グレード毎査定</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>