force-app/main/default/objects/Case__c/fields/assess_price_min__c.field-meta.xml
<CustomField>
    <fullName>assess_price_min__c</fullName>
    <label>査定最小額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>