force-app/main/default/objects/Case__c/fields/AssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentDate__c</fullName>
    <formula>Oppotunity__r.AssessmentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>営業査定日</label>
    <type>Date</type>
</CustomField>