force-app/main/default/objects/Case__c/fields/Auction_date__c.field-meta.xml
<CustomField>
    <fullName>Auction_date__c</fullName>
    <description>喜多</description>
    <label>オークション開催日</label>
    <type>Date</type>
</CustomField>