force-app/main/default/objects/Case__c/fields/Auction_PickupRemarks_hs__c.field-meta.xml
<CustomField>
    <fullName>Auction_PickupRemarks_hs__c</fullName>
    <label>オークション掲載引取備考　★★★</label>
    <type>TextArea</type>
</CustomField>