force-app/main/default/objects/Case__c/fields/Automobile_Inspection_Application_Case__c.field-meta.xml
<CustomField>
    <fullName>Automobile_Inspection_Application_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>現在登録証発行申請</label>
    <referenceTo>Document_management__c</referenceTo>
    <relationshipLabel>買取受付 (現在登録証発行申請)</relationshipLabel>
    <relationshipName>Automobile_Inspection_Application_Case</relationshipName>
    <type>Lookup</type>
</CustomField>