force-app/main/default/objects/Case__c/fields/Automobile_Inspection_issued__c.field-meta.xml
<CustomField>
    <fullName>Automobile_Inspection_issued__c</fullName>
    <description>山本</description>
    <label>現在登録証発行済み</label>
    <type>Date</type>
</CustomField>