force-app/main/default/objects/Case__c/fields/AutomobileInspectionApp_Approved__c.field-meta.xml
<CustomField>
    <fullName>AutomobileInspectionApp_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>現在登録申請承認済み</label>
    <type>Checkbox</type>
</CustomField>