force-app/main/default/objects/Case__c/fields/BatteryDead__c.field-meta.xml
<CustomField>
    <fullName>BatteryDead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野作成(喜多依頼分)</description>
    <label>バッテリ上がり（走行可）</label>
    <type>Checkbox</type>
</CustomField>