force-app/main/default/objects/Case__c/fields/BC__c.field-meta.xml
<CustomField>
    <fullName>BC__c</fullName>
    <inlineHelpText>A車輌は入力不要です。一般案件で解体提携車輌の場合は、BCの区分を入力してください。この項目入力することでMVRへ引取依頼が飛びます。</inlineHelpText>
    <label>BC区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bプラス</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>