force-app/main/default/objects/Case__c/fields/benefit_target__c.field-meta.xml
<CustomField>
    <fullName>benefit_target__c</fullName>
    <description>Webから査定依頼が入ってきた際に追加特典付与の情報が入る。</description>
    <label>特典付与対象</label>
    <type>TextArea</type>
</CustomField>