force-app/main/default/objects/Case__c/fields/BringinginYard__c.field-meta.xml
<CustomField>
    <fullName>BringinginYard__c</fullName>
    <label>使用不可_搬入予定ヤード</label>
    <type>TextArea</type>
</CustomField>