force-app/main/default/objects/Case__c/fields/BugContent__c.field-meta.xml
<CustomField>
    <fullName>BugContent__c</fullName>
    <description>与儀</description>
    <label>不具合内容</label>
    <length>80</length>
    <type>Text</type>
</CustomField>