force-app/main/default/objects/Case__c/fields/BuisinessHours_judge__c.field-meta.xml
<CustomField>
    <fullName>BuisinessHours_judge__c</fullName>
    <description>山本</description>
    <formula>IF( TIMEVALUE( ReceptionDateTime__c ) + 3600000 * 9  &gt;  TIMEVALUE(&quot;21:00:00.000&quot;),TRUE,
IF( TIMEVALUE( ReceptionDateTime__c ) + 3600000 * 9 &lt;= TIMEVALUE(&quot;9:00:00.000&quot;),TRUE,FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>営業時間外判定</label>
    <type>Checkbox</type>
</CustomField>