force-app/main/default/objects/Case__c/fields/CallA_IsCreated__c.field-meta.xml
<CustomField>
    <fullName>CallA_IsCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>コールA商談作成済み</label>
    <type>Checkbox</type>
</CustomField>