force-app/main/default/objects/Case__c/fields/CallAOpportunity__c.field-meta.xml
<CustomField>
    <fullName>CallAOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コールA商談</label>
    <referenceTo>CallCenterA_Opportunity__c</referenceTo>
    <relationshipLabel>買取受付</relationshipLabel>
    <relationshipName>Case_CallAOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>