force-app/main/default/objects/Case__c/fields/CallS_InventoryManagement_memo__c.field-meta.xml
<CustomField>
    <fullName>CallS_InventoryManagement_memo__c</fullName>
    <description>与儀</description>
    <label>コールS/S＋＆在庫管理メモ</label>
    <type>TextArea</type>
</CustomField>