force-app/main/default/objects/Case__c/fields/Cancel_SomeReason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_SomeReason__c</fullName>
    <defaultValue>false</defaultValue>
    <description>重複・売却意思なし・営A査定前CAN→所有者責任外へ表示ラベル変更。与儀</description>
    <label>所有者責任外</label>
    <type>Checkbox</type>
</CustomField>