force-app/main/default/objects/Case__c/fields/Cancellation_after_purchase__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_after_purchase__c</fullName>
    <formula>IF (AND(NOT(ISNULL( PurchaseDate__c )), ISPICKVAL(Phase__c, &quot;キャンセル&quot;))  , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>買取後キャンセルカウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>