force-app/main/default/objects/Case__c/fields/CancellationAfterPurchased__c.field-meta.xml
<CustomField>
    <fullName>CancellationAfterPurchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>買取キャンセル</label>
    <type>Checkbox</type>
</CustomField>