force-app/main/default/objects/Case__c/fields/CancellationAfterSold__c.field-meta.xml
<CustomField>
    <fullName>CancellationAfterSold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>売却後キャンセル</label>
    <type>Checkbox</type>
</CustomField>