force-app/main/default/objects/Case__c/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <label>買取商談キャンセル日</label>
    <type>Date</type>
</CustomField>