force-app/main/default/objects/Case__c/fields/CancellationPenalty__c.field-meta.xml
<CustomField>
    <fullName>CancellationPenalty__c</fullName>
    <label>キャンペナ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>請求なし</fullName>
                <default>true</default>
                <label>請求なし</label>
            </value>
            <value>
                <fullName>請求要</fullName>
            </value>
            <value>
                <fullName>請求済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>