force-app/main/default/objects/Case__c/fields/CancellationReasonDetail__c.field-meta.xml
<CustomField>
    <fullName>CancellationReasonDetail__c</fullName>
    <description>与儀</description>
    <label>クローズ詳細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cancellation_reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>現状売る気なし</fullName>
            </value>
            <value>
                <fullName>新車検討中</fullName>
            </value>
            <value>
                <fullName>中古車検討中（提案不要）</fullName>
            </value>
            <value>
                <fullName>中古車検討中（提案可）</fullName>
            </value>
            <value>
                <fullName>接触時他社売済み</fullName>
            </value>
            <value>
                <fullName>希望額合わず乗り続け</fullName>
            </value>
            <value>
                <fullName>他社金額負け</fullName>
            </value>
            <value>
                <fullName>未商談</fullName>
            </value>
            <value>
                <fullName>商談済み</fullName>
            </value>
            <value>
                <fullName>弊社都合日程合わず</fullName>
            </value>
            <value>
                <fullName>ユーザー都合日程合わず</fullName>
            </value>
            <value>
                <fullName>査定前金額帯合わず</fullName>
            </value>
            <value>
                <fullName>リユース戻し後キャンセル</fullName>
            </value>
            <value>
                <fullName>現金以外不可</fullName>
            </value>
            <value>
                <fullName>日程合わず</fullName>
            </value>
            <value>
                <fullName>引取作業不可</fullName>
            </value>
            <value>
                <fullName>買取条件揃わず</fullName>
            </value>
            <value>
                <fullName>取引不可ユーザー</fullName>
            </value>
            <value>
                <fullName>家族反対</fullName>
            </value>
            <value>
                <fullName>次車決まらず</fullName>
            </value>
            <value>
                <fullName>減額合意取れず</fullName>
            </value>
            <value>
                <fullName>他社売</fullName>
            </value>
            <value>
                <fullName>乗り続け</fullName>
            </value>
            <value>
                <fullName>連絡付かず</fullName>
            </value>
            <value>
                <fullName>買取不可</fullName>
            </value>
            <value>
                <fullName>その他（経緯入力必須）</fullName>
            </value>
            <value>
                <fullName>日程約束前連絡付かず</fullName>
            </value>
            <value>
                <fullName>査定前キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>