force-app/main/default/objects/Case__c/fields/CandidateVendor__c.field-meta.xml
<CustomField>
    <fullName>CandidateVendor__c</fullName>
    <label>引取依頼業者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>