force-app/main/default/objects/Case__c/fields/car_grade2__c.field-meta.xml
<CustomField>
    <fullName>car_grade2__c</fullName>
    <formula>Grades__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>グレード（表示用）</label>
    <type>Text</type>
</CustomField>