force-app/main/default/objects/Case__c/fields/car_num_duplicate_check__c.field-meta.xml
<CustomField>
    <fullName>car_num_duplicate_check__c</fullName>
    <label>車台番号重複チェック</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要確認</fullName>
            </value>
            <value>
                <fullName>確認済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>