force-app/main/default/objects/Case__c/fields/car_tax_sms_date__c.field-meta.xml
<CustomField>
    <fullName>car_tax_sms_date__c</fullName>
    <description>フロー：SMS自動送信_自動車税還付案内通知　で使用される。
SMS送信された後に一括でSMS送信日が入力される。山本</description>
    <label>自動車税還付案内SMS送信日</label>
    <type>Date</type>
</CustomField>