force-app/main/default/objects/Case__c/fields/CarClassRemark__c.field-meta.xml
<CustomField>
    <fullName>CarClassRemark__c</fullName>
    <label>車両区分備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>