force-app/main/default/objects/Case__c/fields/CarModel__c.field-meta.xml
<CustomField>
    <fullName>CarModel__c</fullName>
    <label>【Web】車種名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>