force-app/main/default/objects/Case__c/fields/CarName_sms__c.field-meta.xml
<CustomField>
    <fullName>CarName_sms__c</fullName>
    <description>山本</description>
    <formula>CarTypes__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CarName_sms</label>
    <type>Text</type>
</CustomField>