force-app/main/default/objects/Case__c/fields/CarSize__c.field-meta.xml
<CustomField>
    <fullName>CarSize__c</fullName>
    <label>車輌サイズ</label>
    <type>TextArea</type>
</CustomField>