force-app/main/default/objects/Case__c/fields/CarTax__c.field-meta.xml
<CustomField>
    <fullName>CarTax__c</fullName>
    <label>自動車税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>