force-app/main/default/objects/Case__c/fields/Cartax_hs__c.field-meta.xml
<CustomField>
    <fullName>Cartax_hs__c</fullName>
    <label>自動車税</label>
    <length>100</length>
    <type>Text</type>
</CustomField>