force-app/main/default/objects/Case__c/fields/CarTypes__c.field-meta.xml
<CustomField>
    <fullName>CarTypes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種　★</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Models__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <filterItems>
            <field>Mst_Models__c.maker__r.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>買取受付</relationshipLabel>
    <relationshipName>CartypeunderContact</relationshipName>
    <type>Lookup</type>
</CustomField>