force-app/main/default/objects/Case__c/fields/Case_history__c.field-meta.xml
<CustomField>
    <fullName>Case_history__c</fullName>
    <description>山本</description>
    <label>経緯内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>