force-app/main/default/objects/Case__c/fields/CaseDocMgmt__c.field-meta.xml
<CustomField>
    <fullName>CaseDocMgmt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類管理依頼</label>
    <referenceTo>Document_management__c</referenceTo>
    <relationshipLabel>買取受付</relationshipLabel>
    <relationshipName>CaseDocMgmt</relationshipName>
    <type>Lookup</type>
</CustomField>