force-app/main/default/objects/Case__c/fields/Catrus_memo__c.field-meta.xml
<CustomField>
    <fullName>Catrus_memo__c</fullName>
    <description>喜多</description>
    <label>ソコカラ販売メモ</label>
    <type>TextArea</type>
</CustomField>