force-app/main/default/objects/Case__c/fields/ChangeColor_hs__c.field-meta.xml
<CustomField>
    <fullName>ChangeColor_hs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>色替</label>
    <type>Checkbox</type>
</CustomField>