force-app/main/default/objects/Case__c/fields/CharteredCarSlip__c.field-meta.xml
<CustomField>
    <fullName>CharteredCarSlip__c</fullName>
    <inlineHelpText>ゼロから段取結果が返される際に自動反映</inlineHelpText>
    <label>ゼロ受注番号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>