force-app/main/default/objects/Case__c/fields/chk_kskigen__c.field-meta.xml
<CustomField>
    <fullName>chk_kskigen__c</fullName>
    <formula>Oppotunity__r.chk_kskigen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>公的書類期限</label>
    <type>Date</type>
</CustomField>