force-app/main/default/objects/Case__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>類別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>